--- a/svm-latex-cv.tex
+++ b/svm-latex-cv.tex
@@ -239,7 +239,7 @@ $endif$
 
 $if(jobtitle)$\moveleft.5\hoffset\centerline{$jobtitle$}$endif$
 $if(address)$\moveleft.5\hoffset\centerline{$address$}$endif$
-\moveleft.5\hoffset\centerline{ $if(email)$$if(fontawesome)$\faEnvelopeO \hspace{1 mm}$else$\emph{E-mail:}$endif$ \href{mailto:}{\tt $email$} \hspace{1 mm}$endif$ $if(twitter)$$if(fontawesome)$\faTwitter \hspace{1 mm}$else$\emph{Twitter:}$endif$ \href{http://twitter.com/$twitter$}{\tt $twitter$} \hspace{1 mm} $endif$ $if(github)$$if(fontawesome)$\faGithub \hspace{1 mm}$else$\emph{Github:}$endif$ \href{http://github.com/$github$}{\tt $github$} \hspace{1 mm} $endif$ $if(linkedin)$$if(fontawesome)$\faLinkedin \hspace{1 mm}$else$\emph{Linkedin:}$endif$ \href{http://linkedin.com/in/$linkedin$}{\tt $linkedin$} \hspace{1 mm} $endif$ $if(scholar)$$if(fontawesome)$\faGraduationCap \hspace{1 mm}$else$\emph{Google Scholar:}$endif$ \href{http://bit.ly/$scholar$}{\tt $scholar$} \hspace{1 mm} $endif$ $if(web)$$if(fontawesome)$\faGlobe \hspace{1 mm}$else$\emph{Web:}$endif$ \href{http://$web$}{\tt $web$} $endif$ $if(phone)$$if(fontawesome)$ \faPhone \hspace{1 mm}$else$\emph{Phone:}$endif$  $phone$ \hspace{1 mm} $endif$}
+\moveleft.5\hoffset\centerline{ $if(email)$$if(fontawesome)$\faEnvelopeO \hspace{1 mm}$else$\emph{E-mail:}$endif$ \href{mailto:}{\tt $email$} \hspace{1 mm}$endif$ $if(twitter)$$if(fontawesome)$\faTwitter \hspace{1 mm}$else$\emph{Twitter:}$endif$ \href{http://twitter.com/$twitter$}{\tt $twitter$} \hspace{1 mm} $endif$ $if(github)$$if(fontawesome)$\faGithub \hspace{1 mm}$else$\emph{Github:}$endif$ \href{http://github.com/$github$}{\tt $github$} \hspace{1 mm} $endif$ $if(linkedin)$$if(fontawesome)$\faLinkedin \hspace{1 mm}$else$\emph{Linkedin:}$endif$ \href{http://linkedin.com/in/$linkedin$}{\tt $linkedin$} \hspace{1 mm} $endif$ $if(scholar)$$if(fontawesome)$\faGraduationCap \hspace{1 mm}$else$\emph{Google Scholar:}$endif$ \href{https://scholar.google.com/citations?user=P-65wkIAAAAJ&hl=en}{\tt $scholar$} \hspace{1 mm} $endif$ $if(web)$$if(fontawesome)$\faGlobe \hspace{1 mm}$else$\emph{Web:}$endif$ \href{http://$web$}{\tt $web$} $endif$ $if(phone)$$if(fontawesome)$ \faPhone \hspace{1 mm}$else$\emph{Phone:}$endif$  $phone$ \hspace{1 mm} $endif$}
 $if(updated)$\moveleft.5\hoffset\centerline{\emph{Updated: \today}}$endif$
 \vspace{2 mm}
 
