--- a/cv.Rmd
+++ b/cv.Rmd
@@ -73,6 +73,8 @@ Workshop Certificate – The Thiagi Group at NASAGA \hfill Columbus OH
 
 ## Peer-Reviewed Journal Articles
 
+Greenhow, C. M., Gleason, B., & **Staudt Willet**, K. B. (under review). Social scholarship revisited: Changing scholarly practices in the age of social media.
+
 Greenhalgh, S. P., **Staudt Willet**, K. B., Rosenberg, J. M., & Koehler, M. J. (2018). Tweet, and we shall find: Using digital methods to locate participants in educational hashtags. *TechTrends.* Retrieved from https://doi.org/10.1007/s11528-018-0313-6
 
 Greenhow, C. M., Gleason, B., Marich, H., & **Staudt Willet**, K. B. (2017). Educating social scholars: Examining novice researchers’ practices with social media. *Qwerty – Open and Interdisciplinary Journal of Technology, Culture and Education, 12*(2), 30-45. Retrieved from http://www.ckbg.org/qwerty/index.php/qwerty/article/view/269
@@ -147,6 +149,9 @@ Nominated for *Best Paper Award* \hfill 2019
 Technology as an Agent of Change in Teaching in Learning (TACTL) SIG
 AERA Annual Meeting \hfill Toronto ON
 
+*Council of Graduate Students (COGS) Professional Development Award* - $500 \hfill 2018   
+Michigan State University, College of Education \hfill East Lansing MI
+
 *Summer Research Renewable Fellowship* - $6,000/year x 2 years \hfill 2018-2019  
 Michigan State University, College of Education \hfill East Lansing MI
 
@@ -168,6 +173,8 @@ Learning, Media and Technology (with Dr. Christine Greenhow, faculty reviewer) \
 ## Service to Department
 
 Practicum Committee Member, Sarah Galvin, Michigan State University \hfill 2018  
+Social Network Analysis, Katie Schenkel, Michigan State University \hfill 2018  
+Content Analysis for Doctoral Dissertation, Colin Terry, Michigan State University \hfill 2018  
 
 ## Service to Profession
 
@@ -194,11 +201,6 @@ North American Simulation and Game Association (NASAGA)
 *Board Member* \hfill 2013-2015  
 *Conference Committee Member*, Annual Conference (Seattle WA) \hfill 2015  
 *Conference Committee Member*, Annual Conference (Baltimore MD) \hfill 2014
-
-## Consulting
-
-Social Network Analysis, Katie Schenkel, Michigan State University \hfill 2018  
-Content Analysis for Doctoral Dissertation, Colin Terry, Michigan State University \hfill 2018  
 
 # Professional Experience
 
